--- a/milestone4.ipynb
+++ b/milestone4.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs109a",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
