--- a/milestone4.ipynb
+++ b/milestone4.ipynb
@@ -8,7 +8,8 @@
     "**Project 41, Group 66**  \n",
     "Alia Lu · Hebe Chen · Luc Chen · Yushu Qiu · Zhilin Chen  \n",
     "\n",
-    "**Dataset:** Jigsaw Multilingual Toxic Comment Classification  \n"
+    "**Dataset:** Jigsaw Multilingual Toxic Comment Classification  \n",
+    "**GitHub Repository**: [Multilingual Toxic Comment Classification](https://github.com/Lucchh/Multilingual-Toxic-Comment-Classification)\n"
    ]
   },
   {
