--- a/milestone4.ipynb
+++ b/milestone4.ipynb
@@ -1491,7 +1491,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusion and Future Work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <a id='toc1_6_'></a>[Appendix: (Data Augmentation)- Over Sample](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We attempted to augment our dataset by generating additional samples for rare label combinations using synonym-based text augmentation. The goal was to balance the dataset by increasing the number of samples for underrepresented label combinations. However, during the execution of this process, we encountered an issue where the kernel unexpectedly terminated. This interruption suggests potential problems such as memory limitations or an infinite loop within the augmentation logic. As a result, we were unable to complete the augmentation as planned, and further investigation is needed to identify and resolve the underlying cause of the kernel failure."
    ]
   },
   {
