--- a/milestone4.ipynb
+++ b/milestone4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a id='toc1_'></a>[AC209b · Milestone 4](#toc0_)\n",
+    "# <a id='toc1_'></a>[AC209b · Final Project](#toc0_)\n",
     "**Project 41, Group 66**  \n",
     "Alia Lu · Hebe Chen · Luc Chen · Yushu Qiu · Zhilin Chen  \n",
     "\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
