--- a/milestone4.ipynb
+++ b/milestone4.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
-    "- [AC209b · Milestone 4](#toc1_)    \n",
+    "- [AC209b · Final Project](#toc1_)    \n",
     "  - [Problem Statement](#toc1_1_)    \n",
     "  - [Comprehensive EDA Review](#toc1_2_)    \n",
     "    - [Label Distribution](#toc1_2_1_)    \n",
@@ -55,7 +55,7 @@
     "    - [Feature Engineering Summary](#toc1_2_4_)    \n",
     "    - [Top TF-IDF Features](#toc1_2_5_)    \n",
     "    - [Top Words in Toxic vs. Non-Toxic Comments](#toc1_2_6_)    \n",
-    "  - [3 Model Choice & Justification](#toc1_3_)    \n",
+    "  - [Model Choice & Justification](#toc1_3_)    \n",
     "    - [Training Process](#toc1_3_1_)    \n",
     "  - [Final Model Pipeline Setup](#toc1_4_)    \n",
     "      - [Data Preparation](#toc1_4_1_1_)    \n",
@@ -501,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id='toc1_3_'></a>[3 Model Choice & Justification](#toc0_)"
+    "## <a id='toc1_3_'></a>[Model Choice & Justification](#toc0_)"
    ]
   },
   {
@@ -1530,7 +1530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id='toc1_5_1_'></a>[**5. Comparative Analysis: Baseline vs. Final Model**](#toc0_)\n",
+    "### <a id='toc1_5_1_'></a>[**Comparative Analysis: Baseline vs. Final Model**](#toc0_)\n",
     "\n",
     "Comparing the baseline logistic regression model to the fine-tuned XLM-Roberta reveals substantial gains across nearly every metric—particularly for recall and F1 on the rarest labels. While both models benefit from the same downsampled and stratified data, their representational power differs markedly: the baseline relies solely on local n-gram frequency patterns, whereas the final model leverages deep contextual embeddings pretrained across over 100 languages.\n",
     "\n",
