--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1571,6 +1571,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "| Category      | XLM-RoBERTa F1 | Baseline F1 |\n",
+    "|---------------|----------------|-------------|\n",
+    "| Toxic         | 0.899          | 0.843       |\n",
+    "| Severe Toxic  | 0.501          | 0.271       |\n",
+    "| Obscene       | 0.855          | 0.783       |\n",
+    "| Threat        | 0.599          | 0.252       |\n",
+    "| Insult        | 0.780          | 0.673       |\n",
+    "| Identity Hate | 0.614          | 0.377       |\n",
+    "| **Macro Avg** | **0.708**      | **0.533**   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <a id='toc1_5_1_'></a>[**Comparative Analysis: Baseline vs. Final Model**](#toc0_)\n",
     "\n",
     "Comparing the baseline logistic regression model to the fine-tuned XLM-Roberta reveals substantial gains across nearly every metric—particularly for recall and F1 on the rarest labels. While both models benefit from the same downsampled and stratified data, their representational power differs markedly: the baseline relies solely on local n-gram frequency patterns, whereas the final model leverages deep contextual embeddings pretrained across over 100 languages.\n",
