--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our code relies on a combination of classic machine learning and modern deep learning libraries: Pandas & NumPy for data manipulation, cleaning, and matrix operations; Scikit-learn for TF-IDF vectorization, logistic regression, model evaluation (e.g., F1, AUC), and hyperparameter tuning via GridSearchCV; Transformers (Hugging Face) for loading and fine-tuning the xlm-roberta-base pretrained model and tokenizer; PyTorch for model training, loss computation, and batch processing in the XLM-RoBERTa pipeline; TQDM for progress bars during training loops; and Re / String / Regex for text cleaning and preprocessing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -578,7 +585,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 6: To address the data imbalance in our training dataset, we employ undersampling of the majority class. This method ensures a more balanced distribution of labels, which is crucial for effective model training. After this process, the distribution of labels is as follows: approximately 35% of comments are labeled as toxic, 5% as severe toxic, 20% contain obscene language, 2% include threats, 20% are labeled as insults, and 5% involve identity hate. We need to keep in mind that the y-axis represents the percentage of \"1s,\" and the graph shows a more balanced distribution after undersampling, improving the representation of less frequent labels."
+    "Figure 6: Addressing Class Imbalance through Undersampling\n",
+    "\n",
+    "To address the significant class imbalance in our training dataset, we employed undersampling of the majority class—specifically, the comments with no toxic labels at all. We retained only 20% of these fully clean samples, while preserving all comments that contain at least one toxic label. This strategy increases the relative proportion of positive examples across all six toxicity categories, which is essential for effective multi-label classification.\n",
+    "\n",
+    "After this process, the label distribution became more balanced:\n",
+    "approximately 35% of comments are labeled as toxic, 5% as severe toxic, 20% as obscene, 2% as threat, 20% as insult, and 5% as identity hate.\n",
+    "\n",
+    "Figure 6 shows the percentage of “1”s for each label after undersampling. The y-axis reflects this percentage, highlighting the improved representation of previously underrepresented classes such as threat and identity hate. This adjustment ensures that the model is exposed to sufficient positive examples during training, improving its ability to generalize across all labels.\n",
+    "\n",
+    "While we also explored oversampling minority classes by duplicating rare toxic examples (see Appendix), this approach significantly increased the dataset size and training time without yielding better performance. We therefore chose undersampling as a more efficient and effective solution."
    ]
   },
   {
